-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: None
-
Component/s: hotspot
-
b25
-
aarch64
-
generic
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8342402 | 21.0.6-oracle | Calvin Cheung | P3 | Resolved | Fixed | b03 |
| JDK-8342060 | 21.0.6 | Boris Ulasevich | P3 | Resolved | Fixed | b01 |
- backported by
-
JDK-8342060 AArch64: Save and restore FPCR in the call stub
-
- Resolved
-
-
JDK-8342402 AArch64: Save and restore FPCR in the call stub
-
- Resolved
-
- relates to
-
JDK-8330094 RISC-V: Save and restore FRM in the call stub
-
- Resolved
-
-
JDK-8320151 some javax/sound JCK tests fail with Invalid descriptor with graal on linux-aarch64
-
- Closed
-
-
JDK-8319708 Assertion 'fsetenv didn't work' in jdk tier4 tests after 8295159 on Linux aarch64 RHEL9.3
-
- Closed
-
- links to
-
Commit
openjdk/jdk/6e86904a
-
Commit(master)
openjdk/jdk21u-dev/9e582fcb
-
Review
openjdk/jdk/16637
-
Review(master)
openjdk/jdk21u-dev/1042