8319973: AArch64: Save and restore FPCR in the call stub

Reviewed-by: aph